send spoff email v1

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - SMTP_PASS=${SMTP_PASS}
       - SMTP_SENDER_EMAIL=${SMTP_SENDER_EMAIL}
       - SMTP_SENDER_NAME=${SMTP_SENDER_NAME}
+      - DIRECT_MODE=${DIRECT_MODE}
       - INSECURE_SKIP_VERIFY=${INSECURE_SKIP_VERIFY}
 
   # mailhog:
